<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1">
  <name>Welding WB</name>
  <description>This workbench allows to create frames that will be manufactured by welding tubes.</description>
  <version>0.0.3</version>
  <date>2022.05.24</date>
  <maintainer email="Zolko-123@">Zolko-123</maintainer>
  <license file="LICENSE">GPL-2</license>
  <url type="repository" branch="master">https://github.com/Zolko-123/FreeCAD_Assembly4</url>
  <url type="documentation">https://wiki.freecadweb.org/Assembly4_Workbench</url>
  <url type="readme">https://github.com/Zolko-123/FreeCAD_Assembly4/blob/master/README.md</url>

  <content>
    <workbench>
      <classname>WeldingWorkbench</classname>
      <subdirectory>./</subdirectory>
      <icon>Resources/icons/Welding.svg</icon>
      <tag>welding</tag>
      <freecadmin>0.19.0</freecadmin>
      <depend>Assembly4</depend>
    </workbench>
  </content>

</package>


